Updated ledgerservice